--- a/Overlay.css
+++ b/Overlay.css
@@ -1,3 +1,9 @@
+@import url(http://fonts.googleapis.com/css?family=Gudea);
+
+* {
+  font-family: Gudea !important;
+}
+
 #header { position:fixed;background-color:white;width:100%; 
   display: table;
 }
@@ -27,3 +33,4 @@ div.vis{
 #main-content {
   margin-top: 5em;
 }
+
