--- a/Overlay.css
+++ b/Overlay.css
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Gudea);
 
-* {
+body {
   font-family: Gudea !important;
 }
 
@@ -34,3 +34,37 @@ div.vis{
   margin-top: 5em;
 }
 
+.loader {
+  height: 20px;
+  width: 20px;
+  margin: auto;
+  position:relative;
+  -webkit-animation: rotation .6s infinite linear;
+  -moz-animation: rotation .6s infinite linear;
+  -o-animation: rotation .6s infinite linear;
+  animation: rotation .6s infinite linear;
+  border-left:4px solid #337ab7;
+  border-right:4px solid #337ab7;
+  border-bottom:4px solid #337ab7;
+  border-top:4px solid rgba(255,255,255,.0);
+  border-radius:100%;
+}
+@-webkit-keyframes rotation {
+  from {-webkit-transform: rotate(0deg);}
+  to {-webkit-transform: rotate(359deg);}
+}
+
+@-moz-keyframes rotation {
+  from {-moz-transform: rotate(0deg);}
+  to {-moz-transform: rotate(359deg);}
+}
+
+@-o-keyframes rotation {
+  from {-o-transform: rotate(0deg);}
+  to {-o-transform: rotate(359deg);}
+}
+
+@keyframes rotation {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(359deg);}
+}
