--- a/Overlay.css
+++ b/Overlay.css
@@ -4,8 +4,12 @@ body {
   font-family: Gudea !important;
 }
 
-#header { position:fixed;background-color:white;width:100%; 
+#header {
+  position:fixed;
+  background-color:white;
   display: table;
+  width:100%;
+  z-index: 200;
 }
 
 #header > div { float:left; margin-right: 20px; vertical-align: middle; display: table-cell;}
@@ -20,6 +24,17 @@ div.file_detail_popup {
   visibility:hidden;
   position:static;
   overflow:visible;
+}
+
+div.video-stack {
+  position: relative;
+  display: block;
+  width: 340px;
+  height: 90px;
+}
+
+div.video-stack > img {
+  position: absolute;
 }
 
 div.vis{
